package com.transport.ticket.model;

public enum TicketStatus {
    VALID, // Ticket is valid
    CANCELLED, // Ticket is canceled
    USED
}
